feature: GetRepliesCount
