# backend/docs/swagger.json
@@ -623,11 +623,20 @@
                 "body": {
                     "type": "string"
                 },
+                "favorites_count": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "string"
                 },
+                "is_my_favorite": {
+                    "type": "boolean"
+                },
                 "parent": {
                     "$ref": "#/definitions/entity.Post"
+                },
+                "replies_count": {
+                    "type": "integer"
                 },
                 "user": {
                     "$ref": "#/definitions/entity.User"
