# backend/entity/post.go
@@ -7,4 +7,5 @@ type Post struct {
 	Parent         *Post  `json:"parent"`
 	FavoritesCount int64  `json:"favorites_count"`
 	IsMyFavorite   bool   `json:"is_my_favorite"`
+	RepliesCount   int64  `json:"replies_count"`
 }
